Fix layout overflow issue and add min-height to block

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,14 @@ body {
   background-color: #f5f5f5;
 }
 
+.overflow {
+  overflow: auto;
+}
+
 .block {
   margin: 20px 20px 20px 20px;
   padding: 5px 5px 5px 5px;
+  min-height: 308.5px;
 }
 
 .content h1,
@@ -108,4 +113,3 @@ li {
 ol.breadcrumb>li.breadcrumb-item>a {
   text-decoration: none;
 }
-
